<resources>
    <string name="app_name">My Pantry</string>
    <string name="my_pantry">My Pantry</string>
    <string name="add">Add Item</string>
    <string name="shopping_list">Shopping List</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="recipes">Recipes</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="pantry1">[Pantry 1]</string>
    <string name="pantry2">[Pantry 2]</string>
    <string name="user">[User]</string>
    <string name="user_gmail_com">[user@gmail.com]</string>
    <string name="todo">TODO</string>
    <string name="add_pantry">Add Pantry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_mypantryapp">Welcome to \nMy Pantry</string>
    <string name="your_virtual_pantry_companion">Your virtual pantry companion</string>
    <string name="view_items_in_your_pantry">View items in your pantry</string>
    <string name="example_view_of_pantry">Example view of pantry</string>
    <string name="add_items_to_your_pantry">Add items to your pantry</string>
    <string name="example_view_of_add_items">Example view of add items</string>
    <string name="select_your_dietary_preference">Select your dietary preferences</string>
    <string name="example_view_of_dietary_selection">Example view of dietary selection</string>
    <string name="create_shopping_lists">Create shopping lists</string>
    <string name="example_view_of_shopping_list">Example view of shopping list</string>

    <string-array name="categories">
        <item>Fruit</item>
        <item>Meat</item>
        <item>Vegetables</item>
        <item>Pasta</item>
        <item>Rice</item>
        <item>Dairy</item>
        <item>Sweets</item>
        <item>Greens</item>
        <item>Soup</item>
        <item>Spreads</item>
        <item>Cereals</item>
        <item>Drinks</item>
        <item>Herbs/Spices</item>
        <item>Cans</item>
        <item>Pet</item>
        <item>Snacks</item>
        <item>Frozen</item>
        <item>International</item>
        <item>Desserts</item>
    </string-array>
</resources>