<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/my_pantry" />

    <item
        android:id="@+id/nav_add_item"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add" />

    <item
        android:id="@+id/nav_shop_list"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        android:title="@string/shopping_list" />

    <item
        android:id="@+id/nav_meal_plan"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="@string/meal_plan" />

    <item
        android:id="@+id/nav_recipes"
        android:icon="@drawable/ic_baseline_restaurant_24"
        android:title="@string/recipes" />

</menu>