<?xml version="1.0" encoding="utf-8"?>

<!--
This file contains the clickable items in the navigation drawer.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <!-- The items are in the same group so that one of the items is always selected.-->
    <group android:checkableBehavior="single"
        android:id="@+id/pantries">

        <item android:id="@+id/nav_pantry"
            android:title="@string/pantry1"
            android:icon="@drawable/ic_pantry"
            app:showAsAction="ifRoom"/>
        <item android:id="@+id/nav_add_pantry"
            android:title="@string/add_pantry"
            app:showAsAction="always"
            android:icon="@drawable/ic_add" />

        <!--This is here to separate the pantry's from the settings + logout. This is not a good
        fix since the user will be able to click on it. Need to find a solution at some point.-->
<!--        <item-->
<!--            android:id="@+id/separator"-->
<!--            android:title=""/>-->

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            app:showAsAction="always"/>
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out"
            app:showAsAction="always"/>

    </group>

</menu>